# elgato-light-library

./: LICENSE  README.md  pyproject.toml
src/elgato-light-library/: _core.py  room.py  scene.py
src/elgato-light-library/lights/: keylight.py  light.py  lightstrip.py
