[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elgato_light_library"
version = "0.0.1"
authors = [
  { name="Blake Caven" },
]
description = "High level library for managing Elgato lights"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BCaven/elgato-light-library"
Issues = "https://github.com/BCaven/elgato-light-library/issues"